--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -60,6 +60,20 @@ li {
   color: $fourth;
 }
 
+
+.sidenav{
+  background-color: $primary-color;
+  padding: 30px 10px;
+
+  a{
+    
+    color: #00a5b2 !important;
+
+  }
+  .btn-resume{
+    color : #fff !important;
+  }
+}
 /* 
 df0100 red
 a0a3b6 grey
